lab1/test/fails/too_big_constant_err3.asm
	.orig x1000
	add r0, r1, #20
	.end